finished cppPi.md

--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ params:
   github: "https://github.com/tstraus"
   facebook: "https://www.facebook.com/tckrsstrsbgh"
   email: "strausbaugh.tucker@gmail.com"
-  description: "all the asdf"
+  description: "Tucker Strausbaugh"
   cv: "/pages/cv"
   legalnotice: "/pages/legal-notice"
   linkedin: "https://www.linkedin.com/in/tucker-strausbaugh-04018027"
